spade-tests/src/snapshots/spade_tests__ast_lowering__pattern_list_length_mismatch_struct.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected 2 arguments, got 3
  ┌─ testinput:7:10
  │
7 │     let X(a, b, c) = x;
  │          ^^^^^^^^^ Expected 2 arguments here


